# serializer version: 1
# name: test_feature_version_changes_with_code_version
  dict({
    'v1': '0833e931',
    'v2': '61dbe7b3',
  })
# ---
# name: test_feature_version_changes_with_dependencies
  dict({
    'no_deps': '53ba2566',
    'with_deps': 'aad886d8',
  })
# ---
# name: test_feature_version_deterministic
  'd26937b1'
# ---
# name: test_feature_version_multi_field
  '9211da88'
# ---
# name: test_feature_version_with_field_deps
  dict({
    'no_field_deps': '758254e7',
    'with_field_deps': '32f6987c',
  })
# ---
